CSS 연습 2 - 반응형

--- a/MY_BAR/index.html
+++ b/MY_BAR/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Nav bar</title>
+    <script src="./main.js" defer></script>
+    
 </head>
 <body>
     <nav class="navbar">
@@ -22,10 +24,14 @@
             <li><a href="">Bookings</a></li>
         </ul>
 
-        <div class="navbar_icons">
+        <ul class="navbar_icons">
             <li><img src="./icon/Group 1.png" alt="insta"></li>
             <li><img src="./icon/Group 1.png" alt="insta"></li>
-        </div>
+        </ul>
+
+        <a href="#" class="navbar_toggle">
+            <img src="./icon/charm_menu-hamburger.png" alt="hamburger">
+        </a>
     </nav>
 </body>
 </html>
